# brainshare-pelican

./: .gitignore  README.md  brainshare-pelican.code-workspace
.github/workflows/: fly.yml
backend/: .dockerignore  .env.example  Dockerfile.enclave  Dockerfile.server  Dockerfile.worker  README.md  fly.enclave.toml  fly.server.toml  fly.toml  fly.worker.toml  mypy.ini  pyproject.toml
backend/backend/: agent_example.py  ai.py  ast.py  auth.py  main.py  models.py  prompts.py  schemas.py  tasks.py  tools.py
backend/deploy/server/: fly.toml
backend/deploy/worker/: Dockerfile  fly.toml
backend/notebooks/: ai.ipynb
carpenter/: Dockerfile  fly.toml  mypy.ini  pyproject.toml
carpenter/carpenter/: tasks.py
data/: examples.md
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: FileUpload.tsx  database.types.ts  layout.tsx  page.tsx  supabase.tsx  util.tsx
frontend/src/app/@sideMenuDynamic/: default.tsx  error.tsx
frontend/src/app/[resource]/: error.tsx  page.tsx
frontend/src/app/[resource]/[id]/: page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/client/: index.ts
frontend/src/app/client/models/: RunGetCategoriesRequest.ts
frontend/src/app/client/services/: DefaultService.ts
frontend/src/app/components/: ClientConfiguration.tsx  ClientSideDrawerHandler.tsx  FileUpload.tsx  NavigationProgress.tsx  SideMenu.tsx
frontend/src/app/files/: page.tsx
frontend/src/app/files/[id]/process/: page.tsx
frontend/src/app/log-in/: page.tsx
frontend/src/app/log-out/: page.tsx
frontend/src/app/shape/: ShapeComponent.tsx  columns.ts
frontend/src/app/supabase/: auth.tsx  client.ts
queue/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
scripts/: sqlalchemy-generate-types.sh
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20230503221818_remote_commit.sql  20230510211611_profile.sql  20230510211612_graph.sql  20230518152829_storage.sql  20230521050513_steps.sql
supabase/squashed_migrations/: 20230521153037_fk-users.sql
